# electricity_provider

./: pyproject.toml
data/clean/: client_data.csv  describe_price.csv
data/raw/: describe_price.csv
notebooks/: functions.py  load_and_clean_data.ipynb  load_data.ipynb  machine_learning.ipynb  plotting.ipynb  streamlit.py
pickle/: describe_price.pkl  full_prepared_data.pkl  tuned_model.pkl
sql_scripts/: create_database.sql  price_sensitivity.sql
