[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
]
