[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imageio>=2.36.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaleido==0.2.0",
    "matplotlib>=3.9.3",
    "numpy>=2.0.2",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]
